<resources>
    <string name="app_name">Rebuilt Scouting app 2026</string>
    <string name="scout_button">scoutButton</string>
    <string name="delete_button">Delete</string>
    <string name="export_button">Export</string>
    <string name="data_entry_team_number_header">Team:</string>
    <string name="data_entry_match_number_header">Match:</string>
    <string name="data_entry_scouter_name">Name:</string>
    <string name="data_entry_scouting_assignment">Assignment:</string>
    <string name="data_entry_auto_header">Auto</string>
    <string name="data_entry_played_defense">Played Defense</string>
    <string name="data_entry_notes_header">Notes:</string>
    <string name="data_entry_save_exit">Save and Exit</string>
    <string name="data_entry_teleop_header">Teleop</string>
    <string name="data_entry_strategy_header">Strategy:</string>
    <string name="data_entry_fuel_scored_header">Estimated Fuel Scored:</string>
    <string name="data_entry_shooting_accuracy">Shooting Accuracy:</string>
    <string name="data_entry_all_pass">All Pass</string>
    <string name="data_entry_mostly_pass">Mostly Pass</string>
    <string name="data_entry_equal">Equal</string>
    <string name="data_entry_mostly_score">Mostly Score</string>
    <string name="data_entry_all_score">All Score</string>
    <string name="data_entry_shoot_on_move">Can Shoot on the Move</string>
    <string name="data_entry_starting_position_header">Starting Position:</string>
    <string name="data_entry_moved">Moved</string>
    <string name="data_entry_passed_fuel">Passed Fuel</string>
    <string name="data_entry_end_of_game_header">End of Game</string>
    <string name="data_entry_auto_notes">What did they do in auto?</string>
    <string name="data_entry_general_notes">General Notes</string>
    <string name="data_entry_active_hub_notes">Active Hub Notes</string>
    <string name="data_entry_inactive_hub_notes">Inactive Hub Notes</string>
    <string name="data_entry_auto_notes_hint">Ex: Went to neutral zone twice, scored many fuel</string>
    <string name="data_entry_general_notes_hint">Ex: Robot broke down</string>
    <string name="data_entry_active_hub_notes_hint">Ex: Fast shooting rate from triple-barrel puker</string>
    <string name="data_entry_inactive_hub_notes_hint">Ex: Fast intake, made lots of good passes</string>
    <string name="data_entry_auto_neutral_zone">Neutral Zone</string>
    <string name="data_entry_auto_notes_header">Auto Notes:</string>
    <string name="data_entry_scored_lt_100_points"><![CDATA[Scored < 100 Points]]></string>
    <string name="data_entry_flag_outlier_match">Flag Outlier Match</string>
    <string name="data_entry_driver_rating">Driver Rating</string>
    <string name="data_entry_defense_rating">Defense Rating</string>
    <string name="data_entry_susceptible_to_defense">Susceptible to Defense</string>
    <string name="data_entry_teleop_notes">Teleop Notes</string>
    <string name="data_entry_example_teleop_notes">What was good about their robot? What was bad?</string>
    <string name="data_entry_robot_header">Robot</string>
    <string name="data_entry_defense_header">Defense</string>
</resources>