<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="120"
        android:background="?attr/colorSurface"
        android:id="@+id/dataEntry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:weightSum="12"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/teamNumberHeader"
                style="@style/AutoResize25"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/data_entry_team_number_header" />

            <EditText
                android:id="@+id/teamNumber"
                style="@style/AutoResize25"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingTop="10dp"
                android:layout_weight="1"
                android:hint="#" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/matchNumberHeader"
                style="@style/AutoResize25"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/data_entry_match_number_header" />

            <TextView
                android:id="@+id/matchNumber"
                style="@style/AutoResize25"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:hint="#" />

            <TextView
                android:id="@+id/scouter"
                style="@style/AutoResize25"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:gravity="center_vertical"
                android:text="@string/data_entry_scouter_name" />

            <TextView
                android:id="@+id/scoutingAssignment"
                style="@style/AutoResize25"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center_vertical"
                android:text="@string/data_entry_scouting_assignment" />

            <ImageView
                android:id="@+id/schoolLogo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="?attr/SchoolLogo" />

            <ImageView
                android:id="@+id/teamLogo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/team_167_logo" />

        </LinearLayout>

        <View
            android:id="@+id/divider14"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:foreground="?attr/dividerColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="108"
            android:weightSum="123"
            android:orientation="horizontal">

            <View
                android:id="@+id/divider10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?attr/dividerColor" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:orientation="vertical"
                android:weightSum="120">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/AutoResize30"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="Active Hub Notes:" />

                <View
                    android:id="@+id/divider12"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:foreground="?attr/dividerColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="49"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/activeComments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="10"
                        android:inputType="text"
                        android:text="Name" />

                </LinearLayout>

                <View
                    android:id="@+id/divider16"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:foreground="?attr/dividerColor" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/AutoResize30"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="Inactive Hub Notes:" />

                <View
                    android:id="@+id/divider15"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:foreground="?attr/dividerColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="49"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/inactiveComments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="10"
                        android:inputType="text"
                        android:text="Name" />
                </LinearLayout>

                <View
                    android:id="@+id/divider21"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:foreground="?attr/dividerColor" />

            </LinearLayout>

            <View
                android:id="@+id/divider8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?attr/dividerColor" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:weightSum="120"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="36"
                    android:orientation="horizontal"
                    android:weightSum="63">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="11">

                        <TextView
                            android:id="@+id/teleopHeader"
                            style="@style/AutoResize30"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:gravity="center"
                            android:text="Percentage" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="6"
                            android:orientation="vertical"
                            android:weightSum="11">

                            <TextView
                                android:id="@+id/percentage"
                                style="@style/AutoResize25"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="3"
                                android:gravity="center"
                                android:text="0" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="5"
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:weightSum="8">

                                <SeekBar
                                    android:id="@+id/percentageSlider"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="6" />
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/divider13"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:foreground="?attr/dividerColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="21"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="40">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:weightSum="61">

                            <TextView
                                android:id="@+id/towerLevelHeader"
                                style="@style/AutoResize20"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="15"
                                android:gravity="center_vertical"
                                android:paddingStart="15dp"
                                android:text="@string/data_entry_tower_level_header" />

                            <Spinner
                                android:id="@+id/towerLevel"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="15" />

                            <View
                                android:id="@+id/divider42"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:foreground="?attr/dividerColor" />

                            <TextView
                                android:id="@+id/towerPositionHeader"
                                style="@style/AutoResize20"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="15"
                                android:gravity="center_vertical"
                                android:paddingStart="10dp"
                                android:text="@string/data_entry_tower_position_header" />

                            <Spinner
                                android:id="@+id/towerPosition"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="15" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/divider20"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:foreground="?attr/dividerColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/playedDefense"
                        style="@style/AutoResize20"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="28"
                        android:text="@string/data_entry_played_defense" />
                </LinearLayout>

                <View
                    android:id="@+id/divider19"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:foreground="?attr/dividerColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="49"
                    android:orientation="horizontal"
                    android:weightSum="6">

                    <TextView
                        android:id="@+id/commentsHeader"
                        style="@style/AutoResize30"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/data_entry_notes_header" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/comments"
                            style="@style/AutoResize20"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:gravity="bottom"
                            android:hint="Your notes go here..."
                            android:inputType="textMultiLine"
                            android:text="" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <Button
                            android:id="@+id/saveExitButton"
                            style="@style/AutoResize20"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:backgroundTint="?attr/colorPrimary"
                            android:text="@string/data_entry_save_exit"
                            android:textColor="?attr/buttonTextPrimary" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/divider17"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:foreground="?attr/dividerColor" />

            </LinearLayout>

            <View
                android:id="@+id/divider9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:foreground="?attr/dividerColor" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>